flux/frontend/podinfo/serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: podinfo
spec:
  hosts:
    - podinfo.podinfo.svc.cluster.local
  location: MESH_INTERNAL
  ports:
    - name: http
      number: 9898
      protocol: http
  resolution: DNS
  addresses:
    - 240.0.0.1
  endpoints:
    - address: 172.22.252.1
      labels:
        cluster: kind-backend
      ports:
        http: 15443
